# ssg

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs
demo_site/: index.md  site.toml
demo_site/posts/: first-post.md
demo_site/templates/: base.html  post.html  tag.html  tags.html
src/: cache.rs  cli.rs  config.rs  content.rs  devserver.rs  lib.rs  main.rs  paginate.rs  render.rs  routing.rs  taxonomy.rs  templates.rs
tests/: tests.rs
