[package]
name = "ssg"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
walkdir = "2.5.0"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
serde_yaml = "0.9.34"
pulldown-cmark = "0.13.0"
ammonia = "4.1.2"
tera = "1.20.0"

[dev-dependencies]
tempfile = "3.22.0"
